// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots onboarding/FAQs Faq 1`] = `
<div>
  <div>
    <div>
      <button
        class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
        data-testid="ds-button"
        type="button"
      >
        <div
          class="Textweb__Text-dvo2dp-0 hFSNKL"
          color="light.900"
          data-testid="ds-text"
        >
          All FAQs
        </div>
      </button>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots onboarding/FAQs Specific Section Faq 1`] = `
<div>
  <div>
    <div>
      <button
        class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
        data-testid="ds-button"
        type="button"
      >
        <div
          class="Textweb__Text-dvo2dp-0 hFSNKL"
          color="light.900"
          data-testid="ds-text"
        >
          billing - label
        </div>
      </button>
      <br />
      <br />
      <button
        class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
        data-testid="ds-button"
        type="button"
      >
        <div
          class="Textweb__Text-dvo2dp-0 hFSNKL"
          color="light.900"
          data-testid="ds-text"
        >
          website details
        </div>
      </button>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;
